--- a/control/key.html
+++ b/control/key.html
@@ -223,8 +223,8 @@
 <tr><td>C</td><td>노드 색깔 // Ctrl + 드래그로 기본 노드 색깔 변경 가능</td></tr>
 <tr><td>정렬</td><td>노드 선택후 A키 누른상태에서 아래로 (https://siver.artstation.com/blog/zORm/houdini-blog-22-tips-and-tricks)</td></tr>
 <tr><td>Shift + S</td><td>선 스타일 바꾸기 // wiring style change: rounded &lt;-&gt; straight</td></tr>
-<tr><td>Shift + R</td><td><em>입력 순서 교체</em></td></tr>
-<tr><td>Shift + L</td><td><em>Layout 정렬</em></td></tr>
+<tr><td><strong>Shift + R</strong></td><td>입력 순서 교체</td></tr>
+<tr><td><strong>Shift + L</strong></td><td>Layout 정렬</td></tr>
 <tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
@@ -233,7 +233,7 @@
 <tr><td>Q/B</td><td>노랑색 Bypass</td></tr>
 <tr><td>W</td><td>진한 보라색</td></tr>
 <tr><td>E</td><td>연한 보라색 미리보기 토글</td></tr>
-<tr><td>R</td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
+<tr><td><strong>R</strong></td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
 </tbody></table>
 </div>
 <h2 id="keyframe"><a class="header" href="#keyframe">Keyframe</a></h2>
@@ -248,6 +248,9 @@
 <ul>
 <li>Spreadsheet  : Shift + B</li>
 </ul>
+</li>
+<li>
+<p>Ctrl + Alt + S : tab menu 제거</p>
 </li>
 </ul>
 
