--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -185,14 +185,15 @@
 <tr><td>Peak</td><td>Peak 노드는 프리미티브/포인트/에지/브레이크 포인트를 법선 방향으로 이동합니다</td></tr>
 <tr><td>Transform</td><td>트랜스폼 - 전체/그룹 // Move Centeroid To Origin도 유용</td></tr>
 <tr><td>Edit</td><td>트렌스폼 -  컴포넌트 단위</td></tr>
-<tr><td>Delete</td><td>지우기 - 기능 더 많음</td></tr>
+<tr><td>Delete</td><td>지우기 - 기능 더 많음    // 패턴 및 start/end // 중간에 있는 점의 노말을 살려야할시 v@N = cross(v@up, v@side)</td></tr>
 <tr><td>Blast</td><td>지우기 - 간단한</td></tr>
 <tr><td>PolyExtrude</td><td>밀어내기(extrude), 그룹핑 가능</td></tr>
 <tr><td>PolyBevel</td><td>비스듬한면(bevel), 선에 점을 추가하여 아치형으로 변경</td></tr>
 <tr><td>PolyPath</td><td>이어진 여러 라인을 하나의 라인으로 만듬</td></tr>
 <tr><td>PolyFrame</td><td>TangentName에 N을 넣는. TBN 구하기</td></tr>
 <tr><td>PolyFill</td><td>채우기</td></tr>
-<tr><td>Group</td><td>그룹핑 - 추가</td></tr>
+<tr><td>PolySplit</td><td>자르기 - Edge Percentage가 유용</td></tr>
+<tr><td>Group</td><td>그룹핑 - 추가  // 바운딩박스로도 그룹핑 가능(ex 가운데 점만 얻기)</td></tr>
 <tr><td>Group Expression</td><td>그룹핑 - 표현식으로 // Union with Existing</td></tr>
 <tr><td>Group Delete</td><td>그룹핑 - 삭제</td></tr>
 <tr><td>Group by Range</td><td>그룹핑 - 범위 // Invert Range</td></tr>
@@ -215,35 +216,36 @@
 <tr><td>Triangulate 2D</td><td>포인트를 잘 연결해 트라이엥글로 만들어줌</td></tr>
 <tr><td>Resample</td><td>다시 표본화. 선에 점찍는 용도</td></tr>
 <tr><td>Polywire</td><td>와이어프레임</td></tr>
-<tr><td>Curve</td><td>간단한, 베이지어 커브</td></tr>
+<tr><td>Curve</td><td>간단한, 베이지어 커브      // transform에서 bbox를 이용 살짝 올리고 height field에 ray랑 같이 써도 좋음</td></tr>
 <tr><td>Draw Curve</td><td>그릴 수 있지만, 거칠기에 Smooth를 같이 써주는게 좋다.</td></tr>
 <tr><td>Smooth</td><td>완만하게 해주는거 커브, 리셈플이랑 주로 같이 쓰임</td></tr>
 <tr><td>Carve</td><td>깍아내기 // uv로 선을 자름</td></tr>
 <tr><td>Sweep</td><td>선따라 길만들기</td></tr>
-<tr><td>Copy To Point</td><td>포인트들 위치로 복사</td></tr>
-<tr><td>Copy And Transform</td><td>갯수만큼 복사</td></tr>
+<tr><td>Copy To Point</td><td>포인트들 위치로 복사  // attribute 삭제되는거 주의</td></tr>
+<tr><td>Copy And Transform</td><td>갯수만큼 복사 // 테두리같이 뭔가 둘러싸는 걸 만들 때도 유용 / Match Size로 위치조정</td></tr>
 <tr><td>Foreach</td><td><a href="https://www.youtube.com/watch?v=xs5WezgOZlo">https://www.youtube.com/watch?v=xs5WezgOZlo</a></td></tr>
 <tr><td>Platonic Solids</td><td>Tetrahedron(4)/Cube(6)/Octahedron(8)/Icosahedron(20)/Dodecahedron(12)/Soccer ball(pentagonal b12 + w20)/Utah teapot</td></tr>
 <tr><td>Iso Offset</td><td>Builds an offset surface from geometry. // 볼륨변환  // Scatter랑 같이 쓰이기도함</td></tr>
 <tr><td>Convert</td><td>지오메트리 -  기하학을 변환(ex 폴리곤화) // LOD</td></tr>
 <tr><td>Remesh</td><td>지오메트리 - 메쉬 늘리기/줄이기</td></tr>
-<tr><td>Facet</td><td>지오메트리 - 점 또는 표면 법선을 통합</td></tr>
+<tr><td>Facet</td><td>지오메트리 - 점 또는 표면 법선을 통합 // remove inline points로 resample한걸 합칠 수 있다.</td></tr>
 <tr><td>Fuse</td><td>각 포인트들을 거리나 Snap에 따라 <strong>합치기</strong>. 프리미티브 가운데 찾기. Normal 다시 계산하는게 기본이므로 주의</td></tr>
 <tr><td>linear taper</td><td>오므라들게</td></tr>
-<tr><td>Match Size</td><td>Resizes and recenters the input geometry to match a reference bounding box.</td></tr>
+<tr><td>Match Size</td><td>Resizes and recenters the input geometry to match a reference bounding box. // Scale To Fit 유용</td></tr>
 <tr><td>Skin</td><td>두 표면사이에 스킨을 씌워준다. // Keep primitives 로 원래 모양도 유지가능</td></tr>
-<tr><td>Sort</td><td>Point 나 Primitive를 정렬. Shaft/Offset을 이용 오프셋 작업 가능Ï</td></tr>
-<tr><td>Convert Line</td><td>포인트끼리 연결한 라인</td></tr>
+<tr><td>Sort</td><td>Point 나 Primitive를 정렬 혹은 랜덤 /. Shaft/Offset을 이용 오프셋 작업 가능Ï</td></tr>
+<tr><td>Convert Line</td><td>포인트끼리 연결한 라인  // Join 반대라고 생각하면 됨.</td></tr>
 <tr><td>Object Merge</td><td>외부 노드 불러오기</td></tr>
-<tr><td>Visualize Attribute</td><td>Attribute 기반 시각화</td></tr>
+<tr><td>Visualize Attribute</td><td>Attribute 기반 시각화 / TBN(rgb)을 시각화 시키면 좋다 / Type : Marker - Style : Vector</td></tr>
 <tr><td>Divide</td><td>Don't Generate Slivers/Avoid Small Angles 동시 체크 추천</td></tr>
 <tr><td>Clean</td><td></td></tr>
-<tr><td>Pack</td><td>게임엔진에서 별도의 메쉬로 취급</td></tr>
+<tr><td>Pack</td><td>Pack하면 Point 1개와 Primitive 1개로 처리(foreach돌때 좋을듯) / 게임엔진에서 별도의 메쉬로 취급</td></tr>
 <tr><td>Unique Points/Point Split</td><td>Splits points shared by multiple vertices, optionally only if the vertices differ in attribute value. / PolyWire랑 쓰면 좋음</td></tr>
 <tr><td>Paint</td><td>페인팅</td></tr>
 <tr><td>Point</td><td>어트리뷰트 생성 ( point )   // 포인트에 Cd어트리 뷰트 생성시 유용</td></tr>
 </tbody></table>
 </div>
+<p>Extract Centroid 센터 구하기</p>
 <ul>
 <li>이전 버전 노드가 안보일때는
 <ul>
@@ -260,7 +262,7 @@
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
 <tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
-<tr><td>Join</td><td>선들 머지해서 연결작업(후처리)/선 끝을 서로 연결</td></tr>
+<tr><td>Join</td><td>선들 머지해서 연결작업(후처리)/선 끝을 서로 연결 // 떨어져있는 선 각각 프리미티브 합치기(Only Connected)</td></tr>
 <tr><td>Mirror</td><td>좌우 대칭</td></tr>
 <tr><td>Revolve</td><td>중심 축을 중심으로 곡선을 회전하여 표면을 만듬</td></tr>
 </tbody></table>
