--- a/script/opencl.html
+++ b/script/opencl.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>hscript - study.houdini</title>
+        <title>OpenCL - study.houdini</title>
 
 
         <!-- Custom HTML head -->
@@ -129,7 +129,7 @@
                         <a href="https://github.com/netpyoung/study.houdini" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/script/hscript.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/script/opencl.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -158,46 +158,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
-<tr><td>$N</td><td>'npoints(0)-1</td></tr>
-</tbody></table>
-</div>
-<p>$HIP
-$JOB
-$HIPNAME
-$HH</p>
-<p>$F
-$SF
-$FF
-$FPS
-$T</p>
-<h2 id="expression"><a class="header" href="#expression">Expression</a></h2>
-<pre><code class="language-vex">$BBX = relbbox(@P).x
-$BBY = relbbox(@P).y
-$BBZ = relbbox(@P).z
-</code></pre>
-<div class="table-wrapper"><table><thead><tr><th>Expression Local Variables</th><th></th></tr></thead><tbody>
-<tr><td>$PT</td><td>포인트 번호</td></tr>
-<tr><td>$PR</td><td>프리미티브 번호</td></tr>
-<tr><td>$CY</td><td>현재 사본 번호</td></tr>
-<tr><td>$TX   , $TY   , $TZ</td><td>트랜스폼</td></tr>
-<tr><td>$TX2  , $TY2  , $TZ2</td><td>두번째 입력에서 오는 포인트 위치</td></tr>
-<tr><td>$NX   , $NY   , $NZ</td><td>노말</td></tr>
-<tr><td>$CR   , $CG   , $CB   , $CA</td><td>칼라</td></tr>
-<tr><td>$VX   , $VY   , $VZ</td><td>벨로시티</td></tr>
-<tr><td>$BBX  , $BBY  , $BBZ</td><td>바운딩 박스 내 점 위치（0 ~ 1）</td></tr>
-<tr><td>$CEX  , $CEY  , $CEZ</td><td>기하학의 중심</td></tr>
-<tr><td>$AGE</td><td>파티클 수명(초)</td></tr>
-<tr><td>$LIFE</td><td>파티클 수명(0 ~ 1)</td></tr>
-<tr><td>$XMIN , $XMAX , $YMIN  , $YMAX,$ZMIN,$ZMAX</td><td>경계 범위</td></tr>
-<tr><td>$SIZEX, $SIZEY, $SIZEZ</td><td>경계 크기</td></tr>
-</tbody></table>
-</div>
+                        <h1 id="opencl"><a class="header" href="#opencl">OpenCL</a></h1>
 <ul>
-<li>box 바닦붙이기
+<li>OpenCL CPU/GPU 변경
 <ul>
-<li>box의 translate.y = $SIZEY/2</li>
-<li>혹은 center.y = ch("sizey")/2</li>
+<li>Edit &gt; Preferences &gt; Miscellaneous
+<ul>
+<li>OpenGL Device
+<ul>
+<li>Type : CPU/GPU</li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -206,11 +179,11 @@ $BBZ = relbbox(@P).z
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../script/python.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../script/hscript.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../script/opencl.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../technic/VAT.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -220,11 +193,11 @@ $BBZ = relbbox(@P).z
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../script/python.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../script/hscript.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../script/opencl.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../technic/VAT.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
