--- a/etc/reference.html
+++ b/etc/reference.html
@@ -382,8 +382,20 @@
 <ul>
 <li>EHoudiniAcademy
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a></li>
+<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a>
+<ul>
+<li>건물만들기</li>
+</ul>
+</li>
 <li><a href="https://youtube.com/playlist?list=PLd959VTYXCB747UsN1EV8_bLUVEhhtL3i&amp;si=GiGtwdPQUTnznc2L">Foundation Module - The Foundation Project</a></li>
+</ul>
+</li>
+</ul>
+<h2 id="cgcircuit"><a class="header" href="#cgcircuit">cgcircuit</a></h2>
+<ul>
+<li><a href="https://www.cgcircuit.com/tutorial/procedural-modeling-with-vex">Procedural Modeling with VEX</a>
+<ul>
+<li>다리만들기</li>
 </ul>
 </li>
 </ul>
@@ -392,7 +404,7 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../game-engine/unreal.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../tutorial/project_titan.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -406,7 +418,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../game-engine/unreal.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../tutorial/project_titan.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
