--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -239,6 +239,69 @@
 </li>
 </ul>
 </li>
+<li>두 점 사이의 점
+<ul>
+<li>subdivide로 가운데 점 찍고</li>
+<li>delete
+<ul>
+<li>Operation: Non-selected</li>
+<li>Entity: Point</li>
+<li>Number
+<ul>
+<li>Operation : Delete by Range</li>
+<li>Start/End : 1</li>
+<li>Select _ of _ : 1 / 3</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+<p>ledge - (벽에서 튀어나온) 선반, 돌출부.
+beam - 기둥
+truss - 트러스(지붕·교량 따위를 버티기 위해 떠받치는 구조물)
+pillar - (다리·건물 지붕 등을 받치는, 특히 장식 겸용의 둥근) 기둥</p>
+<hr />
+<ul>
+<li>line
+<ul>
+<li>origin: -ch("dist") / 2</li>
+</ul>
+</li>
+<li>box
+<ul>
+<li>center.y = ch("sizey")/2</li>
+</ul>
+</li>
 </ul>
 
                     </main>
