--- a/control/key.html
+++ b/control/key.html
@@ -169,6 +169,7 @@
 <tr><td>뷰모드</td><td>Space</td><td>토글 / 누른채로도 유지 가능</td></tr>
 <tr><td></td><td>F</td><td>오브젝트 포커스</td></tr>
 <tr><td></td><td>W</td><td>Wire 프레임</td></tr>
+<tr><td></td><td>Shift + W</td><td>Shaded/Wire-overShaded</td></tr>
 <tr><td></td><td>D</td><td>옵션 -  Display Option</td></tr>
 <tr><td></td><td>Y</td><td>고스트 오브젝트 하이드 토글</td></tr>
 <tr><td></td><td>Ctrl + B</td><td>뷰포트 전체화면</td></tr>
@@ -221,15 +222,24 @@
 <tr><td>O</td><td>네트워크 오버뷰</td></tr>
 <tr><td>Z</td><td>노드 모양 // Ctrl + 드래그로 기본 노드 모양 변경 가능</td></tr>
 <tr><td>C</td><td>노드 색깔 // Ctrl + 드래그로 기본 노드 색깔 변경 가능</td></tr>
-<tr><td>정렬</td><td>노드 선택후 A키 누른상태에서 아래로 (https://siver.artstation.com/blog/zORm/houdini-blog-22-tips-and-tricks)</td></tr>
-<tr><td>Shift + S</td><td>선 스타일 바꾸기 // wiring style change: rounded &lt;-&gt; straight</td></tr>
+<tr><td>A + 마우스 아레</td><td>노드 Layout 정렬. 노드 선택후 A키 누른상태에서 아래로 (https://siver.artstation.com/blog/zORm/houdini-blog-22-tips-and-tricks)</td></tr>
+<tr><td>L</td><td>노드 Layout 정렬. 선택한것들 Layout</td></tr>
+<tr><td>Shift + L</td><td>노드 Layout 정렬. 전체 Layout 정렬</td></tr>
+<tr><td>.</td><td>.</td></tr>
 <tr><td><strong>Shift + R</strong></td><td>입력 순서 교체</td></tr>
-<tr><td><strong>Shift + L</strong></td><td>Layout 정렬</td></tr>
+<tr><td>Shift + S</td><td>선 스타일 바꾸기 // wiring style change: rounded &lt;-&gt; straight</td></tr>
 <tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
 <tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
-<tr><td>Alt</td><td>이음 노드 추가</td></tr>
+<tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
+<tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
+</tbody></table>
+</div>
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/network/flags.html">네트워크상 키</a></li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Q/B</td><td>노랑색 Bypass</td></tr>
 <tr><td>W</td><td>진한 보라색</td></tr>
 <tr><td>E</td><td>연한 보라색 미리보기 토글</td></tr>
@@ -241,9 +251,6 @@
 <h2 id="ref"><a class="header" href="#ref">Ref</a></h2>
 <ul>
 <li>
-<p><a href="https://www.sidefx.com/docs/houdini/network/flags.html">네트워크상 키</a></p>
-</li>
-<li>
 <p>Ctrl + Alt + Shift + Click : Hotkey Manager</p>
 <ul>
 <li>Spreadsheet  : Shift + B</li>
@@ -251,6 +258,22 @@
 </li>
 <li>
 <p>Ctrl + Alt + S : tab menu 제거</p>
+</li>
+<li>
+<p>Ctrl + E : vex 편집창</p>
+</li>
+<li>
+<p>Ctrl + 마우스 중간 : Revert To Default</p>
+</li>
+<li>
+<p>Ctrl + Shift + 마우스 왼쪽 : Delete Channel</p>
+</li>
+<li>
+<p>코드 폰트 확대 축소</p>
+<ul>
+<li>확대: Ctrl + <code>+</code></li>
+<li>축소: Ctrl + <code>-</code></li>
+</ul>
 </li>
 </ul>
 
