--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>OpenCL - study.houdini</title>
+        <title>영단어 - study.houdini</title>
 
 
         <!-- Custom HTML head -->
@@ -129,7 +129,7 @@
                         <a href="https://github.com/netpyoung/study.houdini" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/script/opencl.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/etc/english_word.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -158,34 +158,25 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="opencl"><a class="header" href="#opencl">OpenCL</a></h1>
-<ul>
-<li>OpenCL CPU/GPU 변경
-<ul>
-<li>Edit &gt; Preferences &gt; Miscellaneous
-<ul>
-<li>OpenGL Device
-<ul>
-<li>Type : CPU/GPU</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
+                        <p>Ledge - (벽에서 튀어나온) 선반, 돌출부.
+Beam - 기둥
+Truss - 트러스(지붕·교량 따위를 버티기 위해 떠받치는 구조물)
+Pillar - (다리·건물 지붕 등을 받치는, 특히 장식 겸용의 둥근) 기둥
+Plank - 널빤지
+Shingle - 조약돌, 지붕널, 대상 포진
+Chimney - 굴뚝
+Lattice - 격자, 격자모양</p>
+<p>profile - 윤곽, (얼굴의) 옆모습
+bevel - 비스듬한 면</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../script/hscript.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../etc/recipe.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../script/glsl.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -193,13 +184,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../script/hscript.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../etc/recipe.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../script/glsl.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
