--- a/file/file.html
+++ b/file/file.html
@@ -168,6 +168,10 @@
 <tr><td></td><td>.hipnc</td><td>Houdini Digital Assets Non-Commercial</td><td>EDUCATION / APPRENTICE</td></tr>
 <tr><td>세션</td><td>.hess</td><td><code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync</td><td></td></tr>
 </tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>.geo</td><td>ASCII</td></tr>
+<tr><td>.bgeo</td><td>binary</td></tr>
+</tbody></table>
 </div>
 <ul>
 <li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
