--- a/file/hda.html
+++ b/file/hda.html
@@ -161,24 +161,37 @@
                         <h1 id="hda"><a class="header" href="#hda">HDA</a></h1>
 <p>Houdini Digital Assets</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
-<tr><td>저장</td><td>Save Node Type</td></tr>
+<tr><td>저장</td><td>노드 우클릭 &gt; Save Node Type 혹은 Assets &gt; Save Asset &gt; 해당 에셋</td></tr>
 <tr><td>락 풀기</td><td>Allow Editing of Contents</td></tr>
 <tr><td>락 걸기</td><td>Match Current Definition (주의 Revert와 같은거. Save Node Type 필수)</td></tr>
-<tr><td>속성 편집</td><td>Type Properties  (주의 Edit Parameter Interface는 HDA가 아닌 해당 노드만 수정함)</td></tr>
+<tr><td>속성 편집</td><td>Type Properties</td></tr>
 </tbody></table>
 </div>
+<p>File &gt; Import &gt; Houdini Digital Asset...</p>
 <ul>
+<li>
+<p>Transform.scale을 드래그해서 Edit Parameter Interface에 넣기</p>
+<ul>
+<li>Subnetnetwork는 추가 가능</li>
+<li>Null CONTROL에 넣으려고 하면 Node is outside subnet 라고 창이 뜨면서 추가가 안됨.
+<ul>
+<li>파라미터 추가 창에서 Forbid Linking Parameters from Outside this Subnet 을 체크 해제하면 추가 할 수 있음.</li>
+</ul>
+</li>
+<li>HDA는 에는 사용 가능한것처럼 보이나 Type Properties 수정시 날라감.</li>
+</ul>
+</li>
 <li>
 <p>파라미터 필드 추가 단축키</p>
 <ul>
 <li>alt + 마우스 중간 쿨릭</li>
 </ul>
 </li>
-<li>
-<p><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></p>
-</li>
-<li>
-<p><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a></p>
+</ul>
+<p>Type Property - Copy Default From Node 현재 노드에 셋팅된걸 디폴트로</p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></li>
+<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=xz3Vvy5X58U">HOUDINI 101 - 09 - Digital Assets &amp; Unreal</a></li>
 <li><a href="https://ehoudiniacademy.com/foundation/">https://ehoudiniacademy.com/foundation/</a></li>
